# autokey

./: .gitignore  README.md  main.py  pyproject.toml
autokey/: autokey.py
sample/: motivacao.txt
scripts/: scripts.py
src/: app.py  constants.py  make_args_parser.py
src/config/: constants.py
src/util/: make_args_parser.py
