[tool.poetry]
name = "autokey"
version = "0.1.0"
description = ""
authors = ["Rafhael Payão <rafaeltmbr@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pynput = "^1.7.6"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scripts.scripts:start"